# career-agent

./: .gitignore  AGENTS.md  README.md  eslint.config.js  jest.config.mjs  package-lock.json  package.json  pyproject.toml
agent-core/: README.md  pyproject.toml
agent-core/src/agent_core/: __init__.py  context.py  conversation.py  core.py  preconditions.py  profile_agent.py  profile_tool.py  storage.py  workflow.py
agent-core/src/agent_core/cli/: __init__.py  app.py
agent-core/src/agent_core/profile/: __init__.py  profile_agent.py  profile_tool.py  prompts.py
agent-core/src/agent_core/shared/: __init__.py  artifact_writer.py  context.py  conversation.py  log_writer.py  workflow.py
agent-core/tests/: test_environment.py
agent-core/tests/agent_core/: test_artifact_writer.py  test_context.py  test_conversation.py  test_core_entrypoints.py  test_log_writer.py  test_precondition_errors.py  test_preconditions.py  test_profile_agent.py  test_profile_finalize.py  test_profile_tool.py  test_profile_update.py  test_prompts.py  test_storage.py  test_workflow.py  test_workflow_state_guard.py
agent-core/tests/agent_core/cli/: test_profile_interview.py
agent-core/tests/agent_core/profile/: test_profile_agent.py  test_profile_finalize.py  test_profile_tool.py  test_profile_update.py  test_prompts.py
agent-core/tests/agent_core/shared/: test_artifact_writer.py  test_context.py  test_conversation.py  test_log_writer.py  test_precondition_errors.py  test_preconditions.py  test_storage.py  test_workflow.py  test_workflow_state_guard.py
docs/: development_guidelines.md  (+2 more)
(+33 files in other folders)
