[project]
name = "agent-core"
version = "0.1.0"
description = "Career agent core services"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langgraph>=1.0.6",
    "typer>=0.20.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
